# robotics2-proj2

./: readme.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/maru2_msgs/: ControlInput.h  GPS.h  Pose.h
devel/share/global_planner/cmake/: global_plannerConfig.cmake
devel/share/local_motion/cmake/: local_motionConfig.cmake
devel/share/mapper/cmake/: mapperConfig.cmake
devel/share/maru2_description/cmake/: maru2_descriptionConfig.cmake
devel/share/maru2_gazebo/cmake/: maru2_gazeboConfig.cmake
devel/share/maru2_map/cmake/: maru2_mapConfig.cmake
devel/share/maru2_msgs/cmake/: maru2_msgs-msg-extras.cmake  maru2_msgs-msg-paths.cmake  maru2_msgsConfig.cmake
devel/share/pose_est/cmake/: pose_estConfig.cmake
devel/share/proj1robot_description/cmake/: proj1robot_descriptionConfig.cmake
devel/share/roseus/ros/maru2_msgs/: manifest.l
devel/share/teleop/cmake/: teleopConfig.cmake
src/global_planner/: CMakeLists.txt  package.xml  prm_planner.py
src/global_planner/launch/: prm_planner.launch
src/local_motion/: CMakeLists.txt  bug2.py  eval_length.py  package.xml  wavefront.py
src/local_motion/launch/: bug2.launch  wavefront.launch
src/mapper/: CMakeLists.txt  package.xml  snapshotter.py
src/mapper/launch/: octomap_mapping.launch
src/maru2_description/: CMakeLists.txt  package.xml
src/maru2_description/launch/: maru2_ex_cmdvel.launch  maru2_ex_drive.launch  maru2_ex_sensors.launch  maru2_preview.launch  maru2_spawn.launch
src/maru2_description/scripts/: bearing_support_column.py  drive_twist_middleman.py  generate_random_position.py  local_gps.py  proximity_middleman.py
src/maru2_description/urdf/: maru2.urdf
src/maru2_gazebo/: CMakeLists.txt  package.xml
src/maru2_gazebo/launch/: room.launch  room_headless.launch
src/maru2_map/: CMakeLists.txt  clean_map.py  configuration_space.pgm  package.xml
src/maru2_msgs/: CMakeLists.txt  package.xml
src/maru2_msgs/msg/: ControlInput.msg  GPS.msg  Pose.msg
src/teleop/: package.xml
src/teleop/launch/: base.launch  drive.launch
(+15 files in other folders)
