<?xml version="1.0"?>
<package format="2">
  <name>global_planner</name>
  <version>0.0.0</version>
  <description>global planning algorithms</description>

  <maintainer email="lia4@rpi.edu">Adam Li</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>maru2_gazebo</exec_depend>

  <export>
    <!-- -->
  </export>
</package>
